--- a/index.html
+++ b/index.html
@@ -45,8 +45,7 @@
                 I'm a web developer who loves to create beautiful and functional websites
                 for people who want to make a difference in the world.
             </p>
-            <p>Currently I'm a student of The Durban University of Technology doing Advance Diploma in Information and Communication Technology(ICT),  where I'm learning how to
-            create beautiful and functional websites using HTML, CSS, JavaScript, and React js.</p>
+            <p>I am an organised, efficient and hard working person, and am willing to discover and accept new ideas which can be put into practice effectively. I am a good listener and learner, able to communicate well with a group and on an individual level. I am able to motivate and direct my talents and skills to meet objectives.</p>
 
             <div class="social-media">
                 <a href="#"><i class='bx bxl-facebook'></i></a>
@@ -91,7 +90,7 @@
     <!-- about section design -->
     <section class="about" id="about">
         <div class="about-img">
-            <img src="images/Aneeee.jpeg" alt="">
+            <img src="images/Aaa.png" alt="">
         </div>
 
         <div class="about-content">
@@ -145,7 +144,7 @@
             </div>
             <div class="services-box">
                 <i class='bx bx-bar-chart-alt'></i>
-                <h3>Cybersecurity</h3>
+                <h3>Graphic Designer</h3>
                 <p></p>
                 <a href="#" class="btn">Read More</a>
             </div>
