--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                 <a href="#"><i class='bx bxl-linkedin'></i></a>
             </div>
 
-            <a href=""class="btn" >Download CV</a>
+         <a href="https://drive.google.com/file/d/1pD9UcVXrbPMk14ir9UOsCyiL6kk-gc9V/view?usp=sharing" class="btn" download>Download CV</a>
+
         </div>
 
         <div class="profession-container">
